base/be/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-dev
spec:
  selector:
    matchLabels:
      app: mysql-dev
  serviceName: mysql-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-dev
    spec:
      containers:
        - image: mysql:8.3.0
          name: mysql-dev
          ports:
            - containerPort: 3306
              name: mysql-dev
          resources:
              requests:
                 cpu: "1"
                 memory: "4Gi"
              limits:
                 cpu: "2"
                 memory: "8Gi"
          # https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#define-a-tcp-liveness-probe
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 6
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-init
              mountPath: /init-script.d
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-volumeclaim
        - name: mysql-init
          configmap:
            name: mysql-init-script
---
## config for service
apiVersion: v1
kind: Service
metadata:
  name: mysql-dev
  labels:
    app: mysql-dev
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql-dev
---
