base/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grabtable-be-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-clusterissuer'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - api.grabtable.net
      secretName: gitops-tls
  rules:
    - host: api.grabtable.net
      http:
        paths:
          - backend:
              service:
                name: grabtable-be-service
                port:
                  number: 80
            path: /v1(/|$)(.*)
            pathType: Prefix
